--- a/responsive.css
+++ b/responsive.css
@@ -28,7 +28,21 @@
     height: 25px;
     margin: 0 auto;
   }
-}
+  .banner {
+    display: flex;
+    gap: 68px;
+    flex-direction: column;
+    align-items: center;
+  }
+  .banner-content {
+    width: 100%;
+  }
+  .banner-img>img{
+  
+   width: 60%;
+   padding-left: 145px;
+   
+  }
 /* For 1024px */
 @media screen and (max-width: 1024px) and (min-width: 786px) {
   nav {
@@ -41,3 +55,5 @@
     gap: 20px;
   }
 }
+
+/* Banner sections */
