--- a/style.css
+++ b/style.css
@@ -52,3 +52,82 @@ nav {
   gap: 32px;
 }
 /* Banner Section */
+.banner-content {
+  width: 50%;
+
+  padding-top: 148px;
+
+  background-color: #ebd9e46c;
+}
+.banner-img {
+  width: 50%;
+}
+.banner {
+  display: flex;
+  gap: 68px;
+}
+.banner-title {
+  color: #0b0223;
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 48px;
+
+  font-weight: 600;
+}
+.goat {
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 95px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+  text-transform: uppercase;
+  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  padding-bottom: 24px;
+}
+.banner-details {
+  color: #534c64;
+
+  font-family: Work Sans;
+  font-size: 20px;
+  padding-left: 30px;
+  font-weight: 500;
+
+  text-transform: lowercase;
+
+  padding-left: 33%;
+}
+.sign,
+.up {
+  color: #fff;
+  font-family: Work Sans;
+  font-size: 20px;
+  border: none;
+  font-weight: 600;
+
+  text-transform: uppercase;
+
+  padding: 21px 40px;
+
+  gap: 10px;
+  border-radius: 48px;
+  background: var(--linear, linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%));
+}
+.up {
+  border-radius: 48px;
+  background: #4ec5f7;
+  border: none;
+}
+.button-banner {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 148px;
+  padding-top: 41px;
+  gap: 24px;
+}
+.banner-img {
+  width: 711px;
+}
