--- a/responsive.css
+++ b/responsive.css
@@ -28,6 +28,7 @@
     height: 25px;
     margin: 0 auto;
   }
+  /* Banner section */
   .banner {
     display: flex;
     gap: 68px;
@@ -37,12 +38,20 @@
   .banner-content {
     width: 100%;
   }
-  .banner-img>img{
-  
-   width: 60%;
-   padding-left: 145px;
-   
+  .banner-img > img {
+    width: 60%;
+    padding-left: 145px;
   }
+  .funny-img-container {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    margin-top: 48px;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 /* For 1024px */
 @media screen and (max-width: 1024px) and (min-width: 786px) {
   nav {
@@ -54,6 +63,25 @@
     flex-wrap: wrap;
     gap: 20px;
   }
+  .banner {
+    display: flex;
+    gap: 68px;
+    flex-direction: column;
+    align-items: center;
+  }
+  .banner-content {
+    width: 100%;
+  }
+  .banner-img > img {
+    width: 70%;
+    padding-left: 145px;
+  }
+  .funny-img-container {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    margin-top: 48px;
+    flex-wrap: wrap;
+    align-items: center;
+  }
 }
-
-/* Banner sections */
