--- a/style.css
+++ b/style.css
@@ -179,3 +179,53 @@ figcaption {
   margin-bottom: 120px;
   margin-top: 24px;
 }
+.play {
+  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-align: right;
+  font-family: Work Sans;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 60px; /* 125% */
+}
+.horse-title {
+  font-family: Work Sans;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  margin-bottom: 24px;
+  width: 341px;
+}
+.horse-description {
+  color: #534c64;
+
+  font-family: Work Sans;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  width: 351px;
+}
+.horse-img {
+  position: relative;
+}
+.doll {
+  position: absolute;
+  bottom: 20px;
+  left: -145px;
+  bottom: -75px;
+}
+.horse {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 120px;
+  align-items: center;
+
+  padding-left: 60px;
+  margin-bottom: 220px;
+}
+.horse-details {
+  padding-left: 60px;
+}
