--- a/responsive.css
+++ b/responsive.css
@@ -69,6 +69,98 @@
     width: 50%;
     padding-left: 70px;
   }
+  .first-icon {
+    display: flex;
+
+    justify-content: center;
+
+    gap: 0px;
+    margin-right: 0px;
+    margin-left: 30px;
+  }
+  .sing-icon {
+    display: flex;
+    align-items: center;
+    gap: 0px;
+    flex-wrap: wrap;
+  }
+
+  .second-icon {
+    display: flex;
+    justify-content: center;
+    gap: 0px;
+    justify-content: flex-start;
+    margin-top: 37px;
+    margin-left: 50px;
+    margin-right: 0px;
+  }
+
+  /* Footer Section */
+  .footer {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #0b0223;
+
+    margin-top: 80px;
+  }
+
+  .footer-title {
+    color: #fff;
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 18px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    font-weight: 600;
+    margin-bottom: 30px;
+    justify-content: center;
+  }
+  .footer-description {
+    color: rgba(255, 255, 255, 0.6);
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 16px;
+    display: flex;
+    gap: 20px;
+    font-weight: 500;
+    margin-bottom: 0px;
+    margin-top: 30px;
+  }
+  .footer-finishing {
+    color: rgba(255, 255, 255, 0.6);
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 16px;
+
+    font-weight: 500;
+  }
+  .footer .gamer-container .spn-G {
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 45px;
+
+    font-weight: 700;
+  }
+  .footer .gamer-container {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 56px;
+    margin-top: 120px;
+    flex-wrap: wrap;
+  }
+  .footer-icon {
+    display: flex;
+    gap: 40px;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+  }
 }
 
 /* For 1024px */
