--- a/style.css
+++ b/style.css
@@ -229,3 +229,103 @@ figcaption {
 .horse-details {
   padding-left: 60px;
 }
+/* Icon section */
+.first-icon {
+  display: flex;
+
+  justify-content: center;
+
+  gap: 30px;
+  cursor: pointer;
+}
+.icon-img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50px;
+}
+.sing-icon {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.second-icon {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin-top: 37px;
+  margin-left: 130px;
+}
+.educational:hover {
+  border-radius: 50px;
+  border: solid #f948b2;
+
+  color: #f948b2;
+  padding: 5px;
+}
+/* Footer Section */
+.footer {
+  display: flex;
+  gap: 56px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: #0b0223;
+  width: 100%;
+  height: 100%;
+  margin-top: 120px;
+}
+.amer {
+  color: #fff;
+  font-family: Work Sans;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 700;
+}
+.footer-title {
+  color: #fff;
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 18px;
+  display: flex;
+  gap: 60px;
+  font-weight: 600;
+  margin-bottom: 56px;
+}
+.footer-description {
+  color: rgba(255, 255, 255, 0.6);
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 16px;
+  display: flex;
+  gap: 60px;
+  font-weight: 500;
+  margin-bottom: 0px;
+  margin-top: 74px;
+}
+.footer-finishing {
+  color: rgba(255, 255, 255, 0.6);
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 16px;
+
+  font-weight: 500;
+}
+.footer .gamer-container .spn-G {
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 45px;
+
+  font-weight: 700;
+}
+.footer .gamer-container {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 56px;
+  margin-top: 120px;
+}
+.footer-icon {
+  display: flex;
+  gap: 40px;
+}
