--- a/responsive.css
+++ b/responsive.css
@@ -54,12 +54,13 @@
     display: flex;
 
     flex-direction: column;
+    padding: 30%;
   }
   .horse-img {
     padding-left: 70px;
   }
   .horseman {
-    width: 100%;
+    width: 300px;
   }
   .doll {
     position: absolute;
@@ -93,6 +94,14 @@
     margin-top: 37px;
     margin-left: 50px;
     margin-right: 0px;
+  }
+  .educational:hover {
+    border-radius: 20px;
+    border: solid #f948b2;
+
+    color: #f948b2;
+    padding-left: 35px;
+    padding-right: 0px;
   }
 
   /* Footer Section */
