--- a/style.css
+++ b/style.css
@@ -281,6 +281,7 @@ figcaption {
   gap: 30px;
   margin-top: 37px;
   margin-left: 130px;
+  cursor: pointer;
 }
 .educational:hover {
   border-radius: 50px;
@@ -317,6 +318,7 @@ figcaption {
   gap: 60px;
   font-weight: 600;
   margin-bottom: 56px;
+  cursor: pointer;
 }
 .footer-description {
   color: rgba(255, 255, 255, 0.6);
@@ -328,6 +330,7 @@ figcaption {
   font-weight: 500;
   margin-bottom: 0px;
   margin-top: 74px;
+  cursor: pointer;
 }
 .footer-finishing {
   color: rgba(255, 255, 255, 0.6);
@@ -355,4 +358,5 @@ figcaption {
 .footer-icon {
   display: flex;
   gap: 40px;
+  cursor: pointer;
 }
