--- a/responsive.css
+++ b/responsive.css
@@ -1,15 +1,17 @@
 /* Nav responsive */
 /* For Mobile */
-@media screen and (max-width: 786px) {
+@media screen and (max-width: 786px) and (min-width: 300px) {
   nav {
     display: flex;
-    padding: 30px 24px;
+    padding: 30px 0px;
     justify-content: space-between;
     background: #fff;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
     align-items: center;
     flex-direction: column;
     gap: 30px;
+    margin-left: 0;
+    margin-right: 0;
   }
   .nav-list {
     display: flex;
@@ -169,6 +171,9 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
+  }
+  body {
+    width: 56vh;
   }
 }
 
