--- a/style.css
+++ b/style.css
@@ -339,6 +339,7 @@ figcaption {
   font-size: 16px;
 
   font-weight: 500;
+  margin-bottom: 100px;
 }
 .footer .gamer-container .spn-G {
   text-align: center;
