--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ nav {
   border-radius: 8px;
   background: rgba(11, 2, 35, 0.1);
   padding: 20px;
+  cursor: pointer;
 }
 .about {
   display: flex;
@@ -69,7 +70,7 @@ nav {
 .banner-title {
   color: #0b0223;
   text-align: center;
-  font-family: Work Sans;
+
   font-size: 48px;
 
   font-weight: 600;
@@ -91,7 +92,6 @@ nav {
 .banner-details {
   color: #534c64;
 
-  font-family: Work Sans;
   font-size: 20px;
   padding-left: 30px;
   font-weight: 500;
@@ -109,6 +109,7 @@ nav {
   font-weight: 600;
 
   text-transform: uppercase;
+  cursor: pointer;
 
   padding: 21px 40px;
 
@@ -137,9 +138,9 @@ nav {
   text-align: center;
   font-family: Work Sans;
   font-size: 48px;
-  font-style: normal;
+
   font-weight: 700;
-  line-height: normal;
+
   margin-top: 120px;
 }
 .funny {
@@ -149,16 +150,15 @@ nav {
   -webkit-text-fill-color: transparent;
   font-family: Work Sans;
   font-size: 48px;
-  font-style: normal;
+
   font-weight: 700;
-  line-height: normal;
 }
 .funny-videos-description {
   color: #534c64;
   text-align: center;
-  font-family: Work Sans;
+
   font-size: 18px;
-  font-style: normal;
+
   font-weight: 400;
   margin-top: 10px;
 }
@@ -214,14 +214,13 @@ figcaption {
   text-align: right;
   font-family: Work Sans;
   font-size: 48px;
-  font-style: normal;
+
   font-weight: 700;
-  line-height: 60px; /* 125% */
 }
 .horse-title {
   font-family: Work Sans;
   font-size: 48px;
-  font-style: normal;
+
   font-weight: 700;
   margin-bottom: 24px;
   width: 341px;
@@ -231,7 +230,7 @@ figcaption {
 
   font-family: Work Sans;
   font-size: 18px;
-  font-style: normal;
+
   font-weight: 400;
   width: 351px;
 }
@@ -306,7 +305,7 @@ figcaption {
   color: #fff;
   font-family: Work Sans;
   font-size: 45px;
-  font-style: normal;
+
   font-weight: 700;
 }
 .footer-title {
